--- a/package.json
+++ b/package.json
@@ -1,28 +1,56 @@
 {
   "name": "vue3_vite_components_library",
-  "version": "1.0.0",
+  "version": "0.0.4",
   "description": "",
-  "main": "index.js",
+  "type": "module",
+  "main": "./dist/x-components-library.umd.js",
+  "module": "./dist/x-components-library.esm.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:serve": "vitepress serve docs"
+    "docs:serve": "vitepress serve docs",
+    "lint": "eslint --fix --ext .ts,.vue,.tsx src",
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.vue\"",
+    "test": "vitest",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "exports": {
+    ".": {
+      "import": "./dist/x-components-library.esm.js",
+      "require": "./dist/x-components-library.umd.js"
+    },
+    "./dist/style.css": "./dist/style.css"
+  },
   "devDependencies": {
     "@iconify-json/ic": "1.1.4",
     "@vitejs/plugin-vue": "3.0.3",
     "@vitejs/plugin-vue-jsx": "2.0.0",
+    "@vue/test-utils": "2.0.2",
+    "happy-dom": "6.0.4",
+    "husky": "^8.0.2",
     "unocss": "0.45.6",
     "vite": "3.0.7",
+    "vite-plugin-dts": "^1.7.1",
     "vitepress": "0.22.4",
-    "vitepress-theme-demoblock": "1.4.2"
+    "vitepress-theme-demoblock": "1.4.2",
+    "vitest": "0.21.1"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.28.0",
+    "eslint-formatter-pretty": "^4.1.0",
+    "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.8.0",
+    "prettier": "^2.8.0",
     "vue": "3.2.37"
   }
 }
